--- a/templates/index.html
+++ b/templates/index.html
@@ -3,45 +3,40 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
-<form method='POST'>
-  <input type='text' autofocus='autofocus' name='search_string'>
-  <input type='submit' formaction='/search' value='Search'>
-</form>
-
-<p><a href="{{ url_for('.add_winner')}}"> Add Another Winner </a></p>
-
-   <h3> {{legend}} </h3>
+<h3> {{legend}} </h3>
 {% if winners %}
-    <table>
-      <thead>
-        <tr>
-          <th> Year </th>
-          <th> First Name </th>
-          <th> Last Name </th>
-          <th> Country </th>
-          <th> Language </th>
-        </tr>
-      </thead>
 
-      <tbody>
-        {% for row in winners %}
-        <tr>
-          <td> {{ row.issued_year }} </td>
-          <td> {{ row.first_name }} </td>
-          <td> {{ row.last_name }} </td>
-          <td> {{ row.country }} </td>
-          <td> {{ row.language_used}} </td>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Year</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Country </th>
+      <th scope="col">Language </th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for row in winners %}
+    <tr>
+      <td> {{ row.issued_year }} </td>
+      <td> {{ row.first_name }} </td>
+      <td> {{ row.last_name }} </td>
+      <td> {{ row.country }} </td>
+      <td> {{ row.language_used}} </td>
 
-          <td>
-            <form action="{{ url_for('get_winner',winner_id=row.id)}}" method='POST'>
-              <input type='submit' value='Details' />
-            </form>
-          </td>
+      <td>
+        <form action="{{ url_for('get_winner',winner_id=row.id)}}" method='POST'>
+          <button type="submit" class="btn btn-outline-dark">Details</button>
+        </form>
+      </td>
 
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+
+
 {% endif %}
 {% endblock %}
